--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -1,25 +1,35 @@
 #summary One-sentence summary of this page.
 
-= Introduction =
-
-Add your content here.
 
 
-= Details =
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+= Purpose = 
+ * To provide a medium-level interface into the IRC protocol, for use by any
+   kind of Flash program .
+ * make sending and receiving IRC commands as painless as possible by providing
+   Actionscript 3 objects to manipulate the commands.
+ * Maintain information regarding the state of the client.  This includes:
+ 	- Information for each channel that the client is in (mode, users, topic)
+	- The client's nick
+	- The client's registration/connection status
+	- The client's mode
+	- misc. statistics
+ * Change the client's state as a result of commands from the server.  The
+   client's state does not change as a result of commands sent by the
+   application.
+ * Make automatic responses to some commands, such as PING.  The command
+   should still be passed to the application, but should be marked as
+   processed.
 
-= Design =
+= IRC Command =
+Commands are the critical link between the application and the framework.
+Commands enter into the framework and are consumed in two ways:
 
-Martyr is designed to be flexible and extendable, rather than fast or small, in terms of number of classes. Information from the server is stored in the ClientState and Commands are parsed and sent out from the IRCConnection class as events. For example, every command that is sent to or from the server is represented as an object. The class of a command is intended to contain all of the knowledge required to deal with that command. Command classes can generate instances of a command and they know how a command affects the client state. Commands are sent as events to command listeners, in a fashion similar to how AWT events work.
+1) A command is created by the application and passed off to the framework for
+sending.  The framework will ask the command for a string representation and discard the command.
 
-A number of classes that provide common functionality are provided. These classes include:
+2) A command is received by the framework from the server.  It must be parsed into an object, and then processed by the framework and passed on to the application.
 
-   1. AutoReconnect - Maintains a connection to a server.
-   2. AutoJoin - Maintains a presence in a channel.
-   3. AutoRegister - Registers on the network, including different nick attempts.
-   4. AutoResponder - Provides "reflex" functions, such as responding to pings and asking for a channel's mode upon joining.
-   5. AutoDccSetup - Listens for notifications of DCC connections and aids in setting them up. 
+= Design (futur)=
+
+This framework is designed to be flexible and extendable. Information from the server is stored in the ClientState and Commands are parsed and sent out from the IRCConnection class as events. 
