Edited wiki page through web user interface.

--- a/wiki/index.wiki
+++ b/wiki/index.wiki
@@ -1,3 +1,7 @@
+#summary One-sentence summary of this page.
+
+= Introduction =
+
 = As3IRCLib = 
 
  * To provide a medium-level interface into the IRC protocol, for use by any kind of Flash program .
