--- a/wiki/index.wiki
+++ b/wiki/index.wiki
@@ -2,7 +2,7 @@
 
 = Introduction =
 
-= As3IRCLib = 
+The purpose of this framework is :
 
  * To provide a medium-level interface into the IRC protocol, for use by any kind of Flash program .
  * make sending and receiving IRC commands as painless as possible by providing Actionscript 3 objects to manipulate the commands.
